Fix margin shift bug

--- a/base/static/base/css/style.css
+++ b/base/static/base/css/style.css
@@ -878,7 +878,6 @@ body {
     width: 100%;
     height: auto;
     position: absolute;
-    margin: -8px -8px;
     padding: 8px 0px 0 0;
     z-index: 1;
 }
